# AgriculturalAssistant

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
agent/: critic.py  diagnose.py  general_agent.py  knowledge_agent.py  supervisor.py
agent/agent_tools/: tools.py
api/: diagnose.py  errors.py  knowledge.py  supervisor.py  user.py
auth/: auth_routes.py  auth_service.py  deps.py
config/: settings.py
data/eval/: testset.json
data/knowledge/: 五寸人参胡萝卜栽培要点.txt  北方如何繁殖三棱箭.txt  大葱优质高产的施肥技术.txt  科学青储饲料的方法.txt
db/: database.py  models.py
docs/: design.md
factory/: model_factory.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  ErrorBoundary.vue  main.js  style.css
frontend/src/components/: AiSidebar.vue  ChatInput.vue  ChatMessages.vue  DiagnoseModal.vue  EditProfileDialog.vue  FeedbackDialog.vue  KnowledgeManager.vue  LoginDialog.vue
frontend/src/composables/: useAuth.js  useChat.js
frontend/src/pages/: ChatLayout.vue  SettingsPage.vue
frontend/src/router/: index.js
prompt/: diagnose_agent.txt  general_agent.txt  knowledge_agent.txt  supervisor_agent.txt
scripts/: evaluate.py  reload_knowledge.py  test_rerank.py
service/: cache_service.py  conversation_service.py  geo_service.py  guard_service.py  rag_service.py  vector_store_service.py
utils/: file_handler.py  logger_handler.py  path_tool.py
