[build-system]
requires = ["setuptools>=64.0", "wheel"]
 build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "agricultural-assistant"
version = "0.3.0"
description = "农业知识问答与作物病害诊断系统 | Multi-Agent + RAG + VLM"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Agricultural Assistant Contributors"},
]
keywords = ["llm", "rag", "langchain", "agriculture", "multi-agent", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
   "fastapi>=0.137.1",
   "langchain>=1.3.9",
   "langchain-chroma>=1.1.0",
   "langchain-community>=0.4.2",
   "langchain-core>=1.4.7",
   "langchain-openai>=1.3.2",
   "langchain-text-splitters>=1.1.2",
   "openai>=2.42.0",
   "pypdf>=6.13.2",
   "tavily-python>=0.7.26",
   "python-multipart>=0.0.32",
   "uvicorn>=0.49.0",
   "python-jose[cryptography]>=3.5.0",
   "slowapi>=0.1.10",
   "sqlalchemy>=2.0.0",
   "pymysql>=1.1.0",
   "dashscope>=1.25.23",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ragas>=0.1"]

[tool.setuptools.packages.find]
include = ["agent*", "api*", "auth*", "config*", "db*", "factory*", "prompt*", "service*", "utils*"]
